...
        android:text="list"
        app:layout_constraintTop_toBottomOf="@id/mail"
        app:layout_constraintLeft_toRightOf="@id/mail"
        android:id="@+id/list"/>

    <Button
        android:id="@+id/song"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
...
